@@ -1,3 +1,8 @@
+BIGDAWG v1.2.2 (Release date: 2015-11-09) Derek Pappas <dpappas@chori.org>
+====================================================================================
+Changes:
+* Added data structure consistency checks prior to running conversion.
+
 BIGDAWG v1.2.1 (Release date: 2015-11-09) Derek Pappas <dpappas@chori.org>
 ====================================================================================
 Changes:
